[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/fase2.gd" type="Script" id=1]
[ext_resource path="res://jungleDirtTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/Sprites/BlackVoa08.png" type="Texture" id=4]
[ext_resource path="res://sprites/Sprites/BlackVoa07.png" type="Texture" id=5]
[ext_resource path="res://scenes/magic_boost.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/Fantasy_Game_Background (online-audio-converter.com) (1).wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/wolf_counter.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/text_back.tscn" type="PackedScene" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 55 )

[node name="fase2" type="Node"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -262176, 4, 0, -196641, 3, 0, -196640, 2, 0, -196639, 1, 0, -262124, 4, 0, -262123, 4, 0, -262122, 4, 0, -262121, 4, 0, -262120, 4, 0, -262119, 4, 0, -262118, 4, 0, -262117, 4, 0, -262116, 4, 0, -262115, 4, 0, -262114, 4, 0, -262113, 4, 0, -262112, 4, 0, -262111, 4, 0, -262110, 4, 0, -262109, 4, 0, -262108, 4, 0, -262107, 4, 0, -262106, 4, 0, -262105, 4, 0, -262104, 4, 0, -131105, 3, 0, -131104, 2, 0, -131103, 1, 0, -131074, 0, 0, -131073, 4, 0, -196608, 4, 0, -196607, 4, 0, -196606, 4, 0, -196605, 4, 0, -196604, 4, 0, -196603, 4, 0, -196602, 5, 0, -196572, 4, 0, -196571, 4, 0, -196570, 4, 0, -196569, 4, 0, -196568, 4, 0, -196567, 4, 0, -196566, 4, 0, -196565, 4, 0, -196564, 4, 0, -65569, 3, 0, -65568, 2, 0, -65567, 1, 0, -65538, 3, 0, -65537, 2, 0, -131072, 2, 0, -131071, 7, 0, -131070, 7, 0, -131069, 7, 0, -131068, 7, 0, -131067, 2, 0, -131066, 2, 0, -131065, 5, 0, -131034, 4, 0, -131033, 4, 0, -131032, 4, 0, -131031, 4, 0, -131030, 4, 0, -131029, 4, 0, -131028, 4, 0, -131027, 4, 0, -33, 3, 0, -32, 2, 0, -31, 1, 0, -2, 3, 0, -1, 2, 0, -65536, 8, 0, -65531, 6, 0, -65530, 2, 0, -65529, 1, 0, -65495, 4, 0, -65494, 4, 0, -65493, 4, 0, -65492, 4, 0, -65491, 4, 0, -65490, 4, 0, -65489, 4, 0, 65503, 3, 0, 65504, 2, 0, 65505, 1, 0, 65534, 3, 0, 65535, 1, 0, 6, 3, 0, 7, 1, 0, 42, 4, 0, 43, 4, 0, 44, 4, 0, 45, 4, 0, 46, 4, 0, 47, 4, 0, 48, 4, 0, 49, 4, 0, 131039, 3, 0, 131040, 2, 0, 131041, 1, 0, 131070, 3, 0, 131071, 1, 0, 65542, 3, 0, 65543, 1, 0, 65546, 1, 0, 65580, 4, 0, 65581, 4, 0, 65582, 4, 0, 65583, 4, 0, 65584, 4, 0, 65585, 4, 0, 65586, 4, 0, 196575, 3, 0, 196576, 2, 0, 196577, 1, 0, 196606, 3, 0, 196607, 1, 0, 131078, 3, 0, 131079, 1, 0, 131082, 1, 0, 131119, 4, 0, 131120, 4, 0, 131121, 4, 0, 131122, 4, 0, 131123, 4, 0, 131124, 4, 0, 262111, 3, 0, 262112, 2, 0, 262113, 1, 0, 262142, 3, 0, 262143, 1, 0, 196614, 6, 0, 196615, 7, 0, 196616, 7, 0, 196617, 7, 0, 196618, 1, 0, 196656, 4, 0, 196657, 4, 0, 196658, 4, 0, 196659, 4, 0, 196660, 4, 0, 196661, 4, 0, 196662, 4, 0, 327647, 3, 0, 327648, 2, 0, 327649, 1, 0, 327678, 3, 0, 327679, 1, 0, 262195, 4, 0, 262196, 4, 0, 262197, 4, 0, 262198, 4, 0, 262199, 4, 0, 393183, 3, 0, 393184, 2, 0, 393185, 1, 0, 393214, 3, 0, 393215, 1, 0, 327697, 0, 0, 327698, 0, 0, 327734, 4, 0, 327735, 4, 0, 327736, 4, 0, 327737, 4, 0, 458719, 3, 0, 458720, 2, 0, 458721, 2, 0, 458722, 5, 0, 458750, 3, 0, 458751, 1, 0, 393232, 0, 0, 393233, 0, 0, 393271, 4, 0, 393272, 4, 0, 393273, 4, 0, 393274, 4, 0, 393275, 4, 0, 393276, 4, 0, 393277, 4, 0, 393278, 4, 0, 393279, 4, 0, 524255, 6, 0, 524256, 2, 0, 524257, 2, 0, 524258, 2, 0, 524259, 5, 0, 524286, 3, 0, 524287, 1, 0, 458767, 0, 0, 458768, 0, 0, 458811, 4, 0, 458812, 4, 0, 458813, 4, 0, 458814, 4, 0, 458815, 4, 0, 458816, 4, 0, 458817, 4, 0, 589792, 6, 0, 589793, 2, 0, 589794, 2, 0, 589795, 2, 0, 589796, 5, 0, 589822, 3, 0, 589823, 1, 0, 524302, 0, 0, 524303, 8, 0, 524315, 0, 0, 524316, 4, 0, 524317, 4, 0, 524318, 4, 0, 524319, 4, 0, 524320, 4, 0, 524321, 4, 0, 524322, 4, 0, 524323, 4, 0, 524324, 4, 0, 524350, 4, 0, 524351, 4, 0, 524352, 4, 0, 524353, 4, 0, 524354, 4, 0, 524355, 4, 0, 524356, 4, 0, 524357, 4, 0, 655329, 6, 0, 655330, 2, 0, 655331, 2, 0, 655332, 2, 0, 655333, 5, 0, 655358, 3, 0, 655359, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 0, 0, 589838, 8, 0, 589850, 0, 0, 589851, 2, 0, 589852, 2, 0, 589853, 2, 0, 589854, 2, 0, 589855, 2, 0, 589856, 2, 0, 589857, 2, 0, 589858, 2, 0, 589859, 2, 0, 589860, 1, 0, 589892, 4, 0, 589893, 4, 0, 589894, 4, 0, 589895, 4, 0, 589896, 4, 0, 589897, 4, 0, 589898, 4, 0, 589899, 4, 0, 720866, 6, 0, 720867, 2, 0, 720868, 2, 0, 720869, 2, 0, 720870, 5, 0, 720894, 6, 0, 720895, 7, 0, 655360, 7, 0, 655361, 7, 0, 655362, 7, 0, 655363, 7, 0, 655364, 7, 0, 655365, 7, 0, 655366, 7, 0, 655367, 7, 0, 655368, 7, 0, 655369, 7, 0, 655370, 7, 0, 655371, 7, 0, 655372, 7, 0, 655373, 8, 0, 655383, 0, 0, 655384, 4, 0, 655385, 4, 0, 655386, 2, 0, 655387, 2, 0, 655388, 2, 0, 655389, 2, 0, 655390, 2, 0, 655391, 7, 0, 655392, 7, 0, 655393, 7, 0, 655394, 7, 0, 655395, 7, 0, 655396, 8, 0, 655408, 1, 0, 655431, 4, 0, 655432, 4, 0, 655433, 4, 0, 655434, 4, 0, 655435, 4, 0, 655436, 4, 0, 655437, 4, 0, 655438, 4, 0, 655439, 4, 0, 786403, 3, 0, 786404, 2, 0, 786405, 2, 0, 786406, 1, 0, 720917, 0, 0, 720918, 4, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 720924, 7, 0, 720925, 7, 0, 720926, 8, 0, 720944, 1, 0, 720972, 4, 0, 720973, 4, 0, 720976, 4, 0, 720977, 4, 0, 851939, 3, 0, 851940, 2, 0, 851941, 2, 0, 851942, 1, 0, 851948, 0, 0, 851949, 4, 0, 851950, 4, 0, 851951, 5, 0, 786450, 0, 0, 786451, 4, 0, 786452, 4, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786458, 7, 0, 786459, 8, 0, 786480, 1, 0, 786509, 4, 0, 786510, 4, 0, 786511, 4, 0, 786512, 4, 0, 786514, 4, 0, 786515, 4, 0, 917475, 3, 0, 917476, 2, 0, 917477, 2, 0, 917478, 1, 0, 917484, 3, 0, 917485, 2, 0, 917486, 2, 0, 917487, 5, 0, 851986, 3, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 7, 0, 851992, 7, 0, 851993, 8, 0, 852016, 1, 0, 852048, 4, 0, 852049, 4, 0, 852050, 4, 0, 852051, 4, 0, 852052, 4, 0, 852065, 4, 0, 852066, 4, 0, 983011, 3, 0, 983012, 2, 0, 983013, 2, 0, 983014, 1, 0, 983020, 3, 0, 983021, 2, 0, 983022, 2, 0, 983023, 2, 0, 983024, 4, 0, 983025, 5, 0, 917522, 6, 0, 917523, 7, 0, 917524, 7, 0, 917525, 7, 0, 917526, 8, 0, 917552, 1, 0, 917553, 1, 0, 917586, 4, 0, 917587, 4, 0, 917588, 4, 0, 917589, 4, 0, 917601, 4, 0, 917602, 2, 0, 1048547, 3, 0, 1048548, 2, 0, 1048549, 2, 0, 1048550, 1, 0, 1048556, 3, 0, 1048557, 2, 0, 1048558, 2, 0, 1048559, 2, 0, 1048560, 2, 0, 1048561, 2, 0, 1048562, 4, 0, 1048563, 5, 0, 983088, 1, 0, 983089, 1, 0, 983125, 4, 0, 983126, 4, 0, 983127, 4, 0, 983136, 4, 0, 983137, 2, 0, 1114083, 3, 0, 1114084, 2, 0, 1114085, 2, 0, 1114086, 1, 0, 1114092, 3, 0, 1114093, 2, 0, 1114094, 2, 0, 1114095, 2, 0, 1114096, 2, 0, 1114097, 2, 0, 1114098, 2, 0, 1114099, 2, 0, 1114100, 5, 0, 1048624, 1, 0, 1048625, 1, 0, 1048671, 4, 0, 1048672, 2, 0, 1048673, 2, 0, 1179619, 3, 0, 1179620, 2, 0, 1179621, 2, 0, 1179622, 1, 0, 1179628, 3, 0, 1179629, 2, 0, 1179630, 2, 0, 1179631, 2, 0, 1179632, 2, 0, 1179633, 2, 0, 1179634, 2, 0, 1179635, 2, 0, 1179636, 2, 0, 1179637, 5, 0, 1179638, 4, 0, 1114160, 1, 0, 1114161, 1, 0, 1114206, 4, 0, 1114207, 2, 0, 1114208, 2, 0, 1245155, 3, 0, 1245156, 2, 0, 1245157, 2, 0, 1245158, 1, 0, 1245164, 3, 0, 1245165, 2, 0, 1245166, 2, 0, 1245167, 2, 0, 1245168, 2, 0, 1245169, 2, 0, 1245170, 2, 0, 1245171, 2, 0, 1245172, 2, 0, 1245173, 2, 0, 1245174, 2, 0, 1245175, 4, 0, 1245176, 4, 0, 1245177, 5, 0, 1179696, 1, 0, 1179697, 1, 0, 1179741, 4, 0, 1179742, 2, 0, 1179743, 2, 0, 1310691, 3, 0, 1310692, 2, 0, 1310693, 2, 0, 1310694, 1, 0, 1310700, 3, 0, 1310701, 2, 0, 1310702, 2, 0, 1310703, 2, 0, 1310704, 2, 0, 1310705, 2, 0, 1310706, 2, 0, 1310707, 2, 0, 1310708, 2, 0, 1310709, 2, 0, 1310710, 2, 0, 1310711, 2, 0, 1310712, 2, 0, 1310713, 1, 0, 1245232, 1, 0, 1245233, 1, 0, 1245276, 4, 0, 1245277, 4, 0, 1245278, 2, 0, 1376227, 3, 0, 1376228, 2, 0, 1376229, 2, 0, 1376230, 1, 0, 1376236, 3, 0, 1376237, 2, 0, 1376238, 2, 0, 1376239, 2, 0, 1376240, 2, 0, 1376241, 2, 0, 1376242, 2, 0, 1376243, 2, 0, 1376244, 2, 0, 1376245, 2, 0, 1376246, 2, 0, 1376247, 2, 0, 1376248, 2, 0, 1376249, 1, 0, 1310768, 1, 0, 1310769, 1, 0, 1310811, 4, 0, 1310812, 2, 0, 1310813, 2, 0, 1441763, 3, 0, 1441764, 2, 0, 1441765, 2, 0, 1441766, 1, 0, 1441772, 3, 0, 1441773, 2, 0, 1441774, 2, 0, 1441775, 2, 0, 1441776, 2, 0, 1441777, 2, 0, 1441778, 2, 0, 1441779, 2, 0, 1441780, 2, 0, 1441781, 2, 0, 1441782, 2, 0, 1441783, 2, 0, 1441784, 2, 0, 1441785, 2, 0, 1441786, 5, 0, 1376303, 1, 0, 1376304, 1, 0, 1376305, 1, 0, 1376345, 4, 0, 1376346, 4, 0, 1376347, 2, 0, 1376348, 2, 0, 1507299, 3, 0, 1507300, 2, 0, 1507301, 2, 0, 1507302, 1, 0, 1507308, 3, 0, 1507309, 2, 0, 1507310, 2, 0, 1507311, 2, 0, 1507312, 2, 0, 1507313, 2, 0, 1507314, 2, 0, 1507315, 2, 0, 1507316, 2, 0, 1507317, 2, 0, 1507318, 2, 0, 1507319, 2, 0, 1507320, 2, 0, 1507321, 2, 0, 1507322, 2, 0, 1507323, 5, 0, 1441838, 4, 0, 1441839, 4, 0, 1441840, 1, 0, 1441841, 1, 0, 1441881, 2, 0, 1441882, 2, 0, 1441883, 2, 0, 1572835, 3, 0, 1572836, 2, 0, 1572837, 2, 0, 1572838, 1, 0, 1572844, 3, 0, 1572845, 2, 0, 1572846, 2, 0, 1572847, 2, 0, 1572848, 2, 0, 1572849, 2, 0, 1572850, 2, 0, 1572851, 2, 0, 1572852, 2, 0, 1572853, 2, 0, 1572854, 2, 0, 1572855, 2, 0, 1572856, 2, 0, 1572857, 2, 0, 1572858, 2, 0, 1572859, 2, 0, 1572860, 5, 0, 1507373, 4, 0, 1507374, 4, 0, 1507375, 1, 0, 1507376, 1, 0, 1507415, 4, 0, 1507416, 2, 0, 1507417, 2, 0, 1638371, 3, 0, 1638372, 2, 0, 1638373, 2, 0, 1638374, 1, 0, 1638380, 3, 0, 1638381, 2, 0, 1638382, 2, 0, 1638383, 2, 0, 1638384, 2, 0, 1638385, 2, 0, 1638386, 2, 0, 1638387, 2, 0, 1638388, 2, 0, 1638389, 2, 0, 1638390, 2, 0, 1638391, 2, 0, 1638392, 2, 0, 1638393, 2, 0, 1638394, 2, 0, 1638395, 2, 0, 1638396, 2, 0, 1638397, 4, 0, 1638398, 4, 0, 1638399, 4, 0, 1572864, 4, 0, 1572865, 5, 0, 1572906, 4, 0, 1572907, 4, 0, 1572908, 4, 0, 1572909, 4, 0, 1572910, 1, 0, 1572949, 4, 0, 1572950, 4, 0, 1572951, 2, 0, 1572952, 2, 0, 1703907, 3, 0, 1703908, 2, 0, 1703909, 2, 0, 1703910, 1, 0, 1703916, 3, 0, 1703917, 2, 0, 1703918, 2, 0, 1703919, 2, 0, 1703920, 2, 0, 1703921, 2, 0, 1703922, 2, 0, 1703923, 2, 0, 1703924, 2, 0, 1703925, 2, 0, 1703926, 2, 0, 1703927, 2, 0, 1703928, 2, 0, 1703929, 2, 0, 1703930, 2, 0, 1703931, 2, 0, 1703932, 2, 0, 1703933, 2, 0, 1703934, 2, 0, 1703935, 2, 0, 1638400, 2, 0, 1638401, 2, 0, 1638402, 4, 0, 1638403, 4, 0, 1638404, 4, 0, 1638405, 5, 0, 1638439, 4, 0, 1638440, 4, 0, 1638441, 4, 0, 1638442, 4, 0, 1638443, 4, 0, 1638444, 4, 0, 1638484, 4, 0, 1638485, 4, 0, 1638486, 2, 0, 1638487, 2, 0, 1769443, 3, 0, 1769444, 2, 0, 1769445, 2, 0, 1769446, 1, 0, 1769452, 3, 0, 1769453, 2, 0, 1769454, 2, 0, 1769455, 2, 0, 1769456, 2, 0, 1769457, 2, 0, 1769458, 2, 0, 1769459, 2, 0, 1769460, 2, 0, 1769461, 2, 0, 1769462, 2, 0, 1769463, 2, 0, 1769464, 2, 0, 1769465, 2, 0, 1769466, 2, 0, 1769467, 2, 0, 1769468, 2, 0, 1769469, 2, 0, 1769470, 2, 0, 1769471, 2, 0, 1703936, 2, 0, 1703937, 2, 0, 1703938, 2, 0, 1703939, 2, 0, 1703940, 2, 0, 1703941, 4, 0, 1703942, 4, 0, 1703943, 4, 0, 1703944, 4, 0, 1703974, 4, 0, 1703975, 4, 0, 1703978, 4, 0, 1703979, 4, 0, 1704018, 4, 0, 1704019, 4, 0, 1704020, 2, 0, 1704021, 2, 0, 1704022, 2, 0, 1834979, 3, 0, 1834980, 2, 0, 1834981, 2, 0, 1834982, 1, 0, 1834988, 3, 0, 1834989, 2, 0, 1834990, 2, 0, 1834991, 2, 0, 1834992, 2, 0, 1834993, 2, 0, 1834994, 2, 0, 1834995, 2, 0, 1834996, 2, 0, 1834997, 2, 0, 1834998, 2, 0, 1834999, 2, 0, 1835000, 2, 0, 1835001, 2, 0, 1835002, 2, 0, 1835003, 2, 0, 1835004, 2, 0, 1835005, 2, 0, 1835006, 2, 0, 1835007, 2, 0, 1769472, 2, 0, 1769473, 2, 0, 1769474, 2, 0, 1769475, 2, 0, 1769476, 2, 0, 1769477, 2, 0, 1769478, 2, 0, 1769479, 2, 0, 1769480, 4, 0, 1769481, 4, 0, 1769482, 4, 0, 1769505, 4, 0, 1769506, 4, 0, 1769507, 4, 0, 1769508, 4, 0, 1769509, 4, 0, 1769553, 2, 0, 1769554, 2, 0, 1769555, 2, 0, 1769556, 2, 0, 1900515, 3, 0, 1900516, 2, 0, 1900517, 2, 0, 1900518, 1, 0, 1900524, 3, 0, 1900525, 2, 0, 1900526, 2, 0, 1900527, 2, 0, 1900528, 2, 0, 1900529, 2, 0, 1900530, 2, 0, 1900531, 2, 0, 1900532, 2, 0, 1900533, 2, 0, 1900534, 2, 0, 1900535, 2, 0, 1900536, 2, 0, 1900537, 2, 0, 1900538, 2, 0, 1900539, 2, 0, 1900540, 2, 0, 1900541, 2, 0, 1900542, 2, 0, 1900543, 2, 0, 1835008, 2, 0, 1835009, 2, 0, 1835010, 2, 0, 1835011, 2, 0, 1835012, 2, 0, 1835013, 2, 0, 1835014, 2, 0, 1835015, 2, 0, 1835016, 2, 0, 1835017, 2, 0, 1835018, 4, 0, 1835019, 4, 0, 1835020, 4, 0, 1835021, 4, 0, 1835022, 4, 0, 1835023, 4, 0, 1835024, 4, 0, 1835025, 4, 0, 1835026, 4, 0, 1835027, 4, 0, 1835028, 4, 0, 1835029, 4, 0, 1835030, 4, 0, 1835031, 4, 0, 1835032, 4, 0, 1835033, 4, 0, 1835034, 4, 0, 1835035, 4, 0, 1835036, 4, 0, 1835037, 4, 0, 1835038, 4, 0, 1835039, 4, 0, 1835040, 4, 0, 1835041, 2, 0, 1835042, 1, 0, 1835088, 2, 0, 1835089, 4, 0, 1835090, 2, 0, 1835091, 2, 0, 1966051, 3, 0, 1966052, 2, 0, 1966053, 2, 0, 1966054, 1, 0, 1966060, 3, 0, 1966061, 2, 0, 1966062, 2, 0, 1966063, 2, 0, 1966064, 7, 0, 1966065, 7, 0, 1966066, 7, 0, 1966067, 7, 0, 1966068, 7, 0, 1966069, 7, 0, 1966070, 7, 0, 1966071, 7, 0, 1966072, 7, 0, 1966073, 7, 0, 1966074, 7, 0, 1966075, 7, 0, 1966076, 7, 0, 1966077, 7, 0, 1966078, 7, 0, 1966079, 7, 0, 1900544, 7, 0, 1900545, 7, 0, 1900546, 7, 0, 1900547, 7, 0, 1900548, 7, 0, 1900549, 7, 0, 1900550, 7, 0, 1900551, 7, 0, 1900552, 7, 0, 1900553, 7, 0, 1900554, 7, 0, 1900555, 7, 0, 1900556, 7, 0, 1900557, 7, 0, 1900558, 7, 0, 1900559, 7, 0, 1900560, 7, 0, 1900561, 7, 0, 1900562, 7, 0, 1900563, 7, 0, 1900564, 7, 0, 1900565, 7, 0, 1900566, 7, 0, 1900567, 7, 0, 1900568, 7, 0, 1900569, 7, 0, 1900570, 7, 0, 1900571, 7, 0, 1900572, 7, 0, 1900573, 7, 0, 1900574, 7, 0, 1900575, 7, 0, 1900576, 7, 0, 1900577, 7, 0, 1900578, 8, 0, 1900622, 2, 0, 1900623, 2, 0, 1900624, 2, 0, 1900625, 2, 0, 2031587, 3, 0, 2031588, 2, 0, 2031589, 2, 0, 2031590, 1, 0, 2031596, 3, 0, 2031597, 2, 0, 2031598, 2, 0, 2031599, 1, 0, 1966155, 4, 0, 1966156, 4, 0, 1966157, 2, 0, 1966158, 2, 0, 1966159, 2, 0, 2097123, 3, 0, 2097124, 2, 0, 2097125, 2, 0, 2097126, 1, 0, 2097132, 3, 0, 2097133, 2, 0, 2097134, 2, 0, 2097135, 1, 0, 2031690, 4, 0, 2031691, 2, 0, 2031692, 2, 0, 2031693, 2, 0, 2031694, 2, 0, 2162659, 3, 0, 2162660, 2, 0, 2162661, 2, 0, 2162662, 1, 0, 2162668, 3, 0, 2162669, 2, 0, 2162670, 2, 0, 2162671, 1, 0, 2097225, 4, 0, 2097226, 2, 0, 2097227, 2, 0, 2097228, 2, 0, 2228195, 3, 0, 2228196, 2, 0, 2228197, 2, 0, 2228198, 1, 0, 2228204, 3, 0, 2228205, 2, 0, 2228206, 2, 0, 2228207, 1, 0, 2162760, 4, 0, 2162761, 2, 0, 2162762, 2, 0, 2162763, 2, 0, 2293731, 3, 0, 2293732, 2, 0, 2293733, 2, 0, 2293734, 1, 0, 2293740, 3, 0, 2293741, 2, 0, 2293742, 2, 0, 2293743, 1, 0, 2228295, 4, 0, 2228296, 2, 0, 2228297, 2, 0, 2228298, 2, 0, 2359267, 3, 0, 2359268, 2, 0, 2359269, 2, 0, 2359270, 1, 0, 2359276, 3, 0, 2359277, 2, 0, 2359278, 2, 0, 2359279, 1, 0, 2293830, 2, 0, 2293831, 2, 0, 2293832, 2, 0, 2293833, 2, 0, 2424803, 3, 0, 2424804, 2, 0, 2424805, 2, 0, 2424806, 1, 0, 2424812, 3, 0, 2424813, 2, 0, 2424814, 2, 0, 2424815, 1, 0, 2359365, 2, 0, 2359366, 2, 0, 2359367, 2, 0, 2359368, 2, 0, 2490339, 3, 0, 2490340, 2, 0, 2490341, 2, 0, 2490342, 1, 0, 2490348, 6, 0, 2490349, 7, 0, 2490350, 7, 0, 2490351, 8, 0, 2424899, 4, 0, 2424900, 2, 0, 2424901, 2, 0, 2424902, 2, 0, 2555875, 3, 0, 2555876, 2, 0, 2555877, 2, 0, 2555878, 1, 0, 2490432, 4, 0, 2490433, 4, 0, 2490434, 2, 0, 2490435, 2, 0, 2490436, 2, 0, 2490437, 2, 0, 2621411, 3, 0, 2621412, 2, 0, 2621413, 2, 0, 2621414, 1, 0, 2555967, 4, 0, 2555968, 2, 0, 2555969, 2, 0, 2555970, 2, 0, 2555971, 2, 0, 2555972, 2, 0, 2686947, 3, 0, 2686948, 2, 0, 2686949, 2, 0, 2686950, 1, 0, 2621500, 4, 0, 2621501, 4, 0, 2621502, 4, 0, 2621503, 2, 0, 2621504, 2, 0, 2621505, 2, 0, 2621506, 2, 0, 2621507, 2, 0, 2752483, 3, 0, 2752484, 2, 0, 2752485, 2, 0, 2752486, 1, 0, 2687034, 4, 0, 2687035, 2, 0, 2687036, 2, 0, 2687037, 2, 0, 2687038, 2, 0, 2687039, 2, 0, 2687040, 2, 0, 2687041, 2, 0, 2818019, 3, 0, 2818020, 2, 0, 2818021, 2, 0, 2818022, 1, 0, 2752565, 4, 0, 2752566, 4, 0, 2752567, 4, 0, 2752568, 4, 0, 2752569, 4, 0, 2752570, 2, 0, 2752571, 2, 0, 2752572, 2, 0, 2752573, 2, 0, 2752574, 2, 0, 2752575, 2, 0, 2752576, 2, 0, 2883555, 3, 0, 2883556, 2, 0, 2883557, 2, 0, 2883558, 1, 0, 2818097, 4, 0, 2818098, 4, 0, 2818099, 4, 0, 2818100, 4, 0, 2818101, 2, 0, 2818102, 2, 0, 2818103, 2, 0, 2818104, 2, 0, 2818105, 2, 0, 2818106, 2, 0, 2818107, 2, 0, 2949090, 4, 0, 2949091, 4, 0, 2949092, 2, 0, 2949093, 2, 0, 2949094, 1, 0, 2883617, 4, 0, 2883618, 4, 0, 2883619, 4, 0, 2883620, 4, 0, 2883621, 4, 0, 2883622, 4, 0, 2883623, 4, 0, 2883624, 4, 0, 2883625, 4, 0, 2883626, 4, 0, 2883627, 4, 0, 2883628, 4, 0, 2883629, 4, 0, 2883630, 4, 0, 2883631, 4, 0, 2883632, 2, 0, 2883633, 2, 0, 2883634, 2, 0, 2883635, 2, 0, 2883636, 2, 0, 2883637, 2, 0, 2883638, 2, 0, 2883639, 2, 0, 2883640, 2, 0, 2883641, 2, 0, 3014626, 4, 0, 3014627, 4, 0, 3014628, 4, 0, 3014629, 4, 0, 3014630, 4, 0, 2949151, 4, 0, 2949152, 4, 0, 2949153, 2, 0, 2949154, 2, 0, 2949155, 2, 0, 2949156, 2, 0, 2949157, 2, 0, 2949158, 2, 0, 2949159, 2, 0, 2949160, 2, 0, 2949161, 2, 0, 2949162, 2, 0, 2949163, 2, 0, 2949164, 2, 0, 2949165, 2, 0, 2949166, 2, 0, 2949167, 2, 0, 2949168, 2, 0, 2949169, 2, 0, 2949170, 2, 0, 2949171, 2, 0, 2949172, 2, 0, 2949173, 2, 0, 2949174, 2, 0, 3080162, 7, 0, 3080163, 7, 0, 3080164, 4, 0, 3080166, 4, 0, 3080167, 4, 0, 3080168, 4, 0, 3080169, 4, 0, 3080170, 4, 0, 3080171, 4, 0, 3080178, 4, 0, 3080179, 4, 0, 3080180, 4, 0, 3080181, 4, 0, 3080182, 4, 0, 3080183, 4, 0, 3080184, 4, 0, 3080185, 4, 0, 3080186, 4, 0, 3080187, 4, 0, 3080188, 4, 0, 3080189, 4, 0, 3080190, 4, 0, 3080191, 4, 0, 3014656, 4, 0, 3014657, 4, 0, 3014658, 4, 0, 3014659, 4, 0, 3014660, 4, 0, 3014661, 4, 0, 3014662, 4, 0, 3014663, 4, 0, 3014678, 4, 0, 3014679, 4, 0, 3014680, 4, 0, 3014681, 4, 0, 3014682, 4, 0, 3014683, 4, 0, 3014684, 4, 0, 3014685, 4, 0, 3014686, 2, 0, 3014687, 2, 0, 3014688, 2, 0, 3014689, 2, 0, 3014690, 2, 0, 3014691, 2, 0, 3014692, 2, 0, 3014693, 2, 0, 3014694, 2, 0, 3014695, 2, 0, 3014696, 2, 0, 3014697, 2, 0, 3014698, 2, 0, 3014699, 2, 0, 3014700, 2, 0, 3014701, 2, 0, 3014702, 2, 0, 3014703, 2, 0, 3014704, 2, 0, 3014705, 2, 0, 3145700, 4, 0, 3145701, 4, 0, 3145702, 7, 0, 3145703, 7, 0, 3145704, 7, 0, 3145705, 7, 0, 3145706, 7, 0, 3145707, 7, 0, 3145708, 4, 0, 3145709, 4, 0, 3145710, 4, 0, 3145711, 4, 0, 3145712, 4, 0, 3145713, 4, 0, 3145714, 4, 0, 3145715, 7, 0, 3145716, 7, 0, 3145717, 7, 0, 3145718, 7, 0, 3145719, 7, 0, 3145720, 7, 0, 3145721, 7, 0, 3145722, 7, 0, 3145723, 7, 0, 3145724, 7, 0, 3145725, 7, 0, 3145726, 7, 0, 3145727, 7, 0, 3080192, 7, 0, 3080193, 7, 0, 3080194, 7, 0, 3080195, 7, 0, 3080196, 7, 0, 3080197, 7, 0, 3080198, 2, 0, 3080199, 4, 0, 3080200, 4, 0, 3080201, 4, 0, 3080202, 4, 0, 3080203, 4, 0, 3080204, 4, 0, 3080205, 4, 0, 3080206, 4, 0, 3080207, 4, 0, 3080208, 4, 0, 3080209, 4, 0, 3080210, 4, 0, 3080211, 4, 0, 3080212, 4, 0, 3080213, 4, 0, 3080214, 4, 0, 3080215, 2, 0, 3080216, 2, 0, 3080217, 2, 0, 3080218, 2, 0, 3080219, 2, 0, 3080220, 2, 0, 3080221, 2, 0, 3080222, 2, 0, 3080223, 2, 0, 3080224, 2, 0, 3080225, 2, 0, 3080226, 2, 0, 3080227, 2, 0, 3080228, 2, 0, 3080229, 2, 0, 3080230, 2, 0, 3080231, 2, 0, 3080232, 2, 0, 3080233, 2, 0, 3080234, 2, 0, 3080235, 2, 0, 3080236, 2, 0, 3080240, 7, 0, 3080241, 7, 0, 3211238, 4, 0, 3211239, 4, 0, 3211240, 4, 0, 3211241, 4, 0, 3211242, 4, 0, 3211243, 4, 0, 3211244, 4, 0, 3211245, 4, 0, 3211246, 4, 0, 3211247, 7, 0, 3211248, 7, 0, 3145733, 2, 0, 3145734, 2, 0, 3145735, 2, 0, 3145736, 2, 0, 3145737, 2, 0, 3145738, 2, 0, 3145739, 2, 0, 3145740, 2, 0, 3145741, 2, 0, 3145742, 2, 0, 3145743, 2, 0, 3145744, 2, 0, 3145745, 2, 0, 3145746, 2, 0, 3145747, 2, 0, 3145748, 2, 0, 3145749, 2, 0, 3145750, 2, 0, 3145751, 2, 0, 3145752, 2, 0, 3145753, 2, 0, 3145754, 2, 0, 3145755, 2, 0, 3145756, 2, 0, 3145757, 2, 0, 3145758, 2, 0, 3145759, 2, 0, 3145760, 2, 0, 3145761, 2, 0, 3145762, 2, 0, 3145763, 2, 0, 3145764, 2, 0, 3145765, 2, 0, 3145766, 2, 0, 3145767, 2, 0, 3145768, 2, 0, 3145769, 2, 0, 3145770, 2, 0, 3145771, 2, 0, 3145772, 2, 0, 3145773, 7, 0, 3145774, 7, 0, 3145775, 7, 0, 3145776, 7, 0, 3211270, 2, 0, 3211271, 2, 0, 3211272, 2, 0, 3211273, 2, 0, 3211274, 2, 0, 3211275, 2, 0, 3211276, 2, 0, 3211277, 2, 0, 3211278, 2, 0, 3211279, 2, 0, 3211280, 2, 0, 3211281, 2, 0, 3211282, 2, 0, 3211283, 2, 0, 3211284, 2, 0, 3211285, 2, 0, 3211286, 2, 0, 3211287, 2, 0, 3211288, 2, 0, 3211289, 2, 0, 3211290, 2, 0, 3211291, 2, 0, 3211292, 2, 0, 3211293, 2, 0, 3211294, 7, 0, 3211295, 7, 0, 3211296, 7, 0, 3211297, 7, 0, 3211298, 7, 0, 3211299, 7, 0, 3211300, 7, 0, 3211301, 7, 0, 3211302, 7, 0, 3211303, 7, 0, 3211304, 7, 0, 3211305, 7, 0, 3211306, 7, 0, 3211307, 7, 0, 3211308, 7, 0, 3211309, 7, 0, 3211310, 7, 0, 3211311, 7, 0, 3276807, 7, 0, 3276808, 7, 0, 3276809, 7, 0, 3276810, 7, 0, 3276811, 7, 0, 3276812, 7, 0, 3276813, 7, 0, 3276814, 7, 0, 3276815, 7, 0, 3276816, 7, 0, 3276817, 7, 0, 3276818, 7, 0, 3276819, 7, 0, 3276820, 7, 0, 3276821, 7, 0, 3276822, 7, 0, 3276823, 7, 0, 3276824, 7, 0, 3276825, 7, 0, 3276826, 7, 0, 3276827, 7, 0, 3276828, 7, 0, 3276829, 7, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 256 )

[node name="fase2complete" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 288, 55 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="fase2complete"]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="fase2complete"]
scale = Vector2( 0.8, 0.7 )
shape = SubResource( 2 )

[node name="magic_boost" parent="." instance=ExtResource( 6 )]
position = Vector2( -736, 898.8 )
scale = Vector2( 1.2, 1.2 )

[node name="Enemys" type="Node" parent="."]

[node name="Enemy" parent="Enemys" instance=ExtResource( 7 )]
position = Vector2( 384, 256 )

[node name="Enemy2" parent="Enemys" instance=ExtResource( 7 )]
position = Vector2( 480, 864 )

[node name="Enemy3" parent="Enemys" instance=ExtResource( 7 )]
position = Vector2( 448, 1473 )

[node name="music_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
pitch_scale = 1.1

[node name="HUD" type="CanvasLayer" parent="."]

[node name="wolf_counter" parent="HUD" instance=ExtResource( 9 )]

[node name="text_back" parent="HUD" instance=ExtResource( 10 )]
[connection signal="body_entered" from="fase2complete" to="." method="_on_fase2complete_body_entered"]
[connection signal="body_entered" from="magic_boost" to="." method="_on_magic_boost_body_entered"]
[connection signal="finished" from="music_theme" to="." method="_on_AudioStreamPlayer_finished"]
